force-app/main/default/objects/cgcloud__Tactic_Product__c/cgcloud__Tactic_Product__c.object-meta.xml
<CustomObject>
    <description>Junction Object between Tactic and Product</description>
    <label>Tactic Product</label>
    <nameField>
        <displayFormat>TP-{00000000}</displayFormat>
        <label>Tactic Product Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Tactic Products</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>