force-app/main/default/objects/cgcloud__Tactic_Product__c/fields/cgcloud__Classification__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Classification__c</fullName>
    <description>Classification of products.</description>
    <inlineHelpText>Relevant for selectable promotions with rewards.</inlineHelpText>
    <label>Classification</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>cgcloud__Classification</valueSetName>
    </valueSet>
</CustomField>