force-app/main/default/objects/cgcloud__Tactic_Product__c/fields/cgcloud__Group_Id__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Group_Id__c</fullName>
    <description>Defines the order of display of the group</description>
    <inlineHelpText>Defines the order of display of the group</inlineHelpText>
    <label>Group Id</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>