force-app/main/default/objects/cgcloud__Tactic_Product__c/fields/cgcloud__Group_Name__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Group_Name__c</fullName>
    <description>Product register grouping drives the way that the products are displayed in the order.</description>
    <inlineHelpText>Relevant only for selectable promotions.</inlineHelpText>
    <label>Group Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>