force-app/main/default/objects/cgcloud__Tactic_Product__c/fields/cgcloud__Group_Sort__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Group_Sort__c</fullName>
    <description>Defines the order of display of a product within a group.</description>
    <inlineHelpText>Defines the order of display of a product within a group.</inlineHelpText>
    <label>Product Group Sort</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>