force-app/main/default/objects/cgcloud__Tactic_Product__c/fields/cgcloud__Included__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Included__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Included</label>
    <type>Checkbox</type>
</CustomField>