force-app/main/default/objects/cgcloud__Tactic_Product__c/fields/cgcloud__Is_Transferred__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Is_Transferred__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is_Transferred</label>
    <type>Checkbox</type>
</CustomField>