force-app/main/default/objects/cgcloud__Tactic_Product__c/fields/cgcloud__Lift_Pct__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Lift_Pct__c</fullName>
    <label>Lift %</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>