force-app/main/default/objects/cgcloud__Tactic_Product__c/fields/cgcloud__Max_Value__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Max_Value__c</fullName>
    <inlineHelpText>Defines the max. quantity which can be given to the product in free item promotion reward context.</inlineHelpText>
    <label>Max Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>