force-app/main/default/objects/cgcloud__Tactic_Product__c/fields/cgcloud__Pct_of_Stores__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Pct_of_Stores__c</fullName>
    <label>% of Stores</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>