force-app/main/default/objects/cgcloud__Tactic_Product__c/fields/cgcloud__Planned_Costs__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Planned_Costs__c</fullName>
    <label>Planned Costs</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>