force-app/main/default/objects/cgcloud__Tactic_Product__c/fields/cgcloud__Product__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Tactic Products</relationshipLabel>
    <relationshipName>Tactic_Products</relationshipName>
    <type>Lookup</type>
</CustomField>