force-app/main/default/objects/cgcloud__Tactic_Product__c/fields/cgcloud__Product_Description_1__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Product_Description_1__c</fullName>
    <description>Associated Product Description 1</description>
    <formula>cgcloud__Product__r.cgcloud__Description_1__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Description 1</label>
    <type>Text</type>
</CustomField>