force-app/main/default/objects/cgcloud__Tactic_Product__c/fields/cgcloud__Promoted_Price__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Promoted_Price__c</fullName>
    <label>Promoted Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>