force-app/main/default/objects/cgcloud__Tactic_Product__c/fields/cgcloud__Quantity__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Quantity__c</fullName>
    <label>Quantity</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>