force-app/main/default/objects/cgcloud__Tactic_Product__c/fields/cgcloud__Sales_Org__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Sales_Org__c</fullName>
    <formula>cgcloud__Product__r.cgcloud__Sales_Org__c</formula>
    <label>Sales Org</label>
    <type>Text</type>
</CustomField>