force-app/main/default/objects/cgcloud__Tactic_Product__c/fields/cgcloud__Tactic__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Tactic__c</fullName>
    <label>Tactic</label>
    <referenceTo>cgcloud__Tactic__c</referenceTo>
    <relationshipLabel>Tactic Products</relationshipLabel>
    <relationshipName>Tactic_Products</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>