force-app/main/default/objects/cgcloud__Tactic_Product__c/fields/cgcloud__TacticIdProductId__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__TacticIdProductId__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>Unique read only text field with Tactic.Id + | +  Product.Id</description>
    <label>TacticIdProductId</label>
    <length>40</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>