force-app/main/default/objects/cgcloud__Tactic_Product__c/validationRules/cgcloud__Prevent_Is_Transferred_Change.validationRule-meta.xml
<ValidationRule>
    <fullName>cgcloud__Prevent_Is_Transferred_Change</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISCHANGED(cgcloud__Is_Transferred__c) , PRIORVALUE(cgcloud__Is_Transferred__c)==True)</errorConditionFormula>
    <errorMessage>You can’t deselect Is Transferred because this tactic product was created as a result of a promotion transfer.</errorMessage>
</ValidationRule>