force-app/main/default/objects/cgcloud__Tactic_Product__c/validationRules/cgcloud__product_level_should_be_product.validationRule-meta.xml
<ValidationRule>
    <fullName>cgcloud__product_level_should_be_product</fullName>
    <active>true</active>
    <description>Only products with &apos;Product&apos; Product Level can be selected.</description>
    <errorConditionFormula>AND(
cgcloud__Tactic__r.cgcloud__Promotion__r.cgcloud__Promotion_Template__r.cgcloud__Selectable_Promotion__c = true,
NOT (ISPICKVAL(cgcloud__Product__r.cgcloud__Product_Level__c , &quot;Product&quot;)))</errorConditionFormula>
    <errorMessage>Only products with &apos;Product&apos; Product Level can be selected.</errorMessage>
</ValidationRule>